--- a/public/form.html
+++ b/public/form.html
@@ -31,7 +31,7 @@
              xhr.addEventListener('load',function(){
                  var result = JSON.parse(xhr.responseText)
                  if(result.result!='ok') return
-                 document.querySelector('.result').innerHTML = result.email
+                 document.querySelector('.result').innerHTML = result.name
              })
          }
      </script>
