--- a/public/form.html
+++ b/public/form.html
@@ -6,7 +6,7 @@
     <title>email form</title>
 </head>
 <body>
-    <form action="/email_port" method="post">
+    <form action="/email/form" method="post">
         email : <input type="text" name="email"><br>
         submit<input type="submit"> 
     </form>
@@ -18,7 +18,7 @@
      <script>
          document.querySelector('.ajaxsend').addEventListener('click',function(){
             var inputdata = document.forms[0].elements[0].value
-            sendAjax('http://localhost:3000/ajax_send_email',inputdata)
+            sendAjax('http://localhost:3000/email/ajax',inputdata)
          })
 
          function sendAjax(url,data){
